--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.3.0"
+    "node": "16.3.0",
+    "npm": "7.15.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
