--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://davik20.github.io/NFTMint",
+  "homepage": "https://davik20.github.io/MintNFT",
   "name": "nftmint",
   "version": "0.1.0",
   "private": true,
